feat: new endpoints (#10)
* fix: add image handlers

* fix: tests

* fix: img src

* fix: img src

* fix: img src

* fix: img src

* fix: img src

* fix: loki config

* fix: loki config

* refactor: change deploy branch
